--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jade WANG</title>
+<title>About</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,7 +21,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 <body>
 <!-- header -->
-	<div class="header">
+<div class="header">
 		<div class="container">
 			<div class="header-nav">
 				<nav class="navbar navbar-default">
@@ -36,16 +36,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<a class="navbar-brand" href="index.html">
 						<img src="images/logo.jpg" />
 						<h3>Jade WANG</h3>
-						<!-- <span>Consultant | Becoming an artist</span> -->
 						</a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 					 <ul class="nav navbar-nav">
-						<li class="hvr-sweep-to-bottom active"><a href="index.html">Work</a></li>
+						<li class="hvr-sweep-to-bottom"><a href="index.html">Work</a></li>
+						<!-- <li class="hvr-sweep-to-bottom"><a href="typo.html">Typo</a></li> -->
 						<li class="hvr-sweep-to-bottom"><a href="gallery.html">Photo Gallery</a></li>
-						<li class="hvr-sweep-to-bottom"><a href="contact.html">About</a></li>
+						<li class="hvr-sweep-to-bottom active"><a href="contact.html">About</a></li>
 					</ul>
 					</div>
 				</nav>
@@ -53,50 +53,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 <!-- //header -->
-<!-- banner-bottom -->
-	<div class="banner-bottom">
+<!-- contact -->
+	<div class="contact">
 		<div class="container">
-			<h3>Welcome To My Art World !</h3>
-			<div class="banner-bottom-grids">
-				<div class="col-md-4 banner-bottom-grid">
-					<a href="you.html">
-						<img class="img-responsive" src="images/4.jpg" alt="">
-						<div class="captn">
-							<h4>YOU</h4>
-							<p></p>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 banner-bottom-grid">
-					<a href="tattoo.html">
-						<img class="img-responsive" src="images/6.png" alt="">
-						<div class="captn">
-							<h4>Tattoo of the mooncake</h4>
-							<p></p>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 banner-bottom-grid">
-					<a href="gingko.html">
-						<img class="img-responsive" src="images/gingko_index.png" alt="">
-						<div class="captn">
-							<h4>Gingko</h4>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 banner-bottom-grid">
-					<a href="background.html">
-						<img class="img-responsive" src="images/5.jpg" alt="">
-						<div class="captn">
-							<h4>In progess</h4>
-						</div>
-					</a>
+			<h3>About me</h3>
+			<br>
+			Contact me by jadewangy@163.com
+			<div class="contact-grid">
+				<div class="contact-right">
+					<p class="est">
+						I studied software engineering during my university in China, and got my master degree of engineering in France. I heard about Atelier Lumiere in 2018, the year when I back to China.
+					I visited the exhibition of Van Gogh in 2019 in Paris and inspired by it.
+					<br><br>
+					I started learning digital art coding in 2021, and decided to focus on generative art in 2022 with my first work.
+					<br><br>
+					I am now a consultant at a supply chain consulting company, and I hope to become an artist in the near future.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-		</div>
+		</div> 
 	</div>
-<!-- //banner-bottom -->
-		<script src="js/bootstrap.js"> </script>
+<!-- //contact -->
+<script src="js/bootstrap.js"> </script>
 </body>
 </html>
